# chunkrs

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md
benches/: chunk_bench.rs
examples/: async_stream.rs  async_tokio.rs  sync_basic.rs  sync_file.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: chunk_bytes.rs  chunk_reader.rs
src/: config.rs  lib.rs  util.rs
src/async_stream/: mod.rs  stream.rs
src/buffer/: mod.rs  pool.rs
src/cdc/: fastcdc.rs  mod.rs  tables.rs  ultracdc.rs
src/chunk/: data.rs  hash.rs  mod.rs
src/chunker/: engine.rs  iter.rs  mod.rs
src/config/: mod.rs
src/error/: mod.rs
src/hash/: blake3.rs  mod.rs
src/util/: mod.rs
tests/: chunker_test.rs
