[package]
name = "chunkrs"
version = "0.8.3"
edition = "2024"
rust-version = "1.85"
authors = ["elemeng"]
license = "MIT"
description = "A high-performance, deterministic, flexible and portable zero-copy streaming Content-Defined Chunking (CDC) and hashing infrastructure library. Bytes in → Chunks & hashes out"
homepage = "https://github.com/elemeng/chunkrs"
repository = "https://github.com/elemeng/chunkrs"
documentation = "https://docs.rs/chunkrs"
readme = "README.md"
keywords = ["cdc", "deduplication", "chunking", "fastcdc", "hash"]
categories = ["algorithms", "data-structures", "filesystem"]
exclude = [
    "/benches",
    "/examples",
    "/fuzz",
    "/.github",
    "/target",
    ".gitignore",
    "AGENTS.md",
    "CHANGELOG.md",
    "*.md.orig",
]

[dependencies]
bytes = "1.5"
blake3 = { version = "1.5", optional = true }

[features]
default = ["hash-blake3"]

# Hashing support
hash = []
hash-blake3 = ["hash", "dep:blake3"]

# Security features
keyed-cdc = ["hash-blake3"]

[dev-dependencies]
tokio = { version = "1.35", features = [
    "rt-multi-thread",
    "macros",
    "time",
] }
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[[bench]]
name = "chunk_bench"
harness = false

[[example]]
name = "sync_basic"

[[example]]
name = "sync_file"

[[example]]
name = "async_stream"

[[example]]
name = "async_tokio"
